test_suite/tests/ui/conflict/internal-tag.stderr
error: variant field name `conflict` conflicts with internal tag
  --> tests/ui/conflict/internal-tag.rs:4:1
   |
3  |   #[derive(Serialize)]
   |            --------- in this derive macro expansion
4  | / #[serde(tag = "conflict")]
5  | | enum E {
6  | |     A {
7  | |         #[serde(rename = "conflict")]
8  | |         x: (),
9  | |     },
10 | | }
   | |_^
   |
   = note: this error originates in the derive macro `Serialize` (in Nightly builds, run with -Z macro-backtrace for more info)
